@@ -2,7 +2,6 @@ plugins {
     id 'org.springframework.boot' version '4.0.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
-    id 'org.jetbrains.kotlin.jvm'
     id "com.diffplug.spotless" version "6.25.0"
 }
 
@@ -17,8 +16,8 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
+    maven { url = 'https://repo.spring.io/milestone' }
+    maven { url = 'https://repo.spring.io/snapshot' }
     maven {
         name = 'Central Portal Snapshots'
         url = 'https://central.sonatype.com/repository/maven-snapshots/'
@@ -45,18 +44,13 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
     testImplementation 'org.springframework.batch:spring-batch-test'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
     systemProperty 'spring.profiles.active', 'test'
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
-kotlin {
-    jvmToolchain(25)
-}
-
-
 tasks.named('build') {
     dependsOn test
     setVersion("")
